--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.20",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
